ToDoList işlemlerinin yapılması . EKLEME GÜNCELLME VE SİLME ek olarak bildirim ikonuna sadece yapılmayan işleri gösterdik

--- a/MyPortfolio/Views/Shared/Components/_LayoutSidbarComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_LayoutSidbarComponentPartial/Default.cshtml
@@ -56,6 +56,12 @@
 				</a>
 			</li>
 			<li class="nav-item">
+				<a href="/ToDoList/Index">
+					<i class="la la-bell"></i>
+					<p>Yapılacaklar</p>
+				</a>
+			</li>
+			<li class="nav-item">
 				<a href="/Experience/experienceList">
 					<i class="la la-apple"></i>
 					<p>Deneyimler</p>
@@ -98,8 +104,8 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
-					<i class="la la-fonticons"></i>
+				<a href="/Message/Inbox">
+					<i class="la la-envelope-o"></i>
 					<p>Gelen Kutusu</p>
 				</a>
 			</li>
