--- a/MyPortfolio/Views/Message/Inbox.cshtml
+++ b/MyPortfolio/Views/Message/Inbox.cshtml
@@ -26,8 +26,7 @@
 										<th scope="col">Tarih</th>
 										<th scope="col">Mesajı Aç</th>
 										<th scope="col">Durum</th>
-										<th scope="col">Sil</th>
-										<th scope="col">Güncelle</th>
+										<th scope="col">Sil</th>									
 									</tr>
 								</thead>
 								<tbody>
@@ -38,19 +37,16 @@
 											<td>@item.NameSurname</td>
 											<td>@item.Subject</td>
 											<td>@item.SendDate.ToShortDateString()</td>
-										<td><a href="/Experience/DeleteExperience/@item.MessageId" class="btn btn-warning">Mesajı Aç</a></td>
+										<td><a href="/Message/MessageDetail/@item.MessageId" class="btn btn-warning">Mesajı Aç</a></td>
 										@if(item.IsRead==true)
 										{
 											<td><a href="/Message/ChangeIsReadToFalse/@item.MessageId" class="btn btn-dark">Okunmadı Olarak İşaretle</a></td>
 										}
 										else
 										{
-											<td><a href="/Message/ChangeIsReadToTrue/@item.MessageId" class="btn btn-info">Okundu olarak İşaretle</a></td>
+											<td><a href="/Message/ChangeIsReadToTrue/@item.MessageId" class="btn btn-info">Okundu Olarak İşaretle</a></td>
 										}
-										<td><a href="/Experience/DeleteExperience/@item.MessageId" class="btn btn-danger">Sil</a></td>
-										<td><a href="/Experience/UpdateExperience/@item.MessageId" class="btn btn-success">Güncelle</a></td>
-										
-
+										<td><a href="/Message/DeleteMessage/@item.MessageId" class="btn btn-danger">Sil</a></td>
 										</tr>
 									}
 								</tbody>
