--- a/MyPortfolio/Views/Shared/Components/_FeatureComponentPartial/Default.cshtml
+++ b/MyPortfolio/Views/Shared/Components/_FeatureComponentPartial/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿ @model List<MyPortfolio.DAL.Entities.Feature>
-<section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="https://i.hizliresim.com/6y49s4p.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+<section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="/Hola10/images/portfolio/gallery/3.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
     <div class="overlay"></div>
     <div class="shadow-overlay"></div>
